--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,44 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  text-align: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: #282c34;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.items{
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  text-align: center;
+  padding-bottom: .5rem;
+  border-bottom: 1px solid red;
+  
+}
+
+.cases {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: aqua;
+  width: 50px;
+
+}
+
+.cases.min {
+  font-size: 10px;
+  color: white;
+  background-color: red;
+}
